--- a/tours.html
+++ b/tours.html
@@ -47,7 +47,12 @@
                 <div class="cards-row">
                     <!-- card -->
                     <a href="#" class="card gray-color">
-                        <img src="./img/cards/card-tours-1.jpg" alt="Бесплатные туры">
+                        <picture>
+                            <source srcset="./img/cards/card-tours-1_599.jpg" media="(max-width: 599px)">
+                            <source srcset="./img/cards/card-tours-1_899.jpg" media="(max-width: 899px)">
+                            <source srcset="./img/cards/card-tours-1_1199.jpg" media="(max-width: 1199px)">
+                            <img src="./img/cards/card-tours-1.jpg" alt="Бесплатные туры">
+                        </picture>
                         <div class="tours-description">
                             <h2 class="tours-description-title">Бесплатные туры</h2>
                         </div>
@@ -56,7 +61,12 @@
 
                 <!-- card -->
                     <a href="#" class="card sand-color">
-                        <img src="./img/cards/card-tours-2.jpg" alt="Экстремальный отдых">
+                        <picture>
+                            <source srcset="./img/cards/card-tours-2_599.jpg" media="(max-width: 599px)">
+                            <source srcset="./img/cards/card-tours-2_899.jpg" media="(max-width: 899px)">
+                            <source srcset="./img/cards/card-tours-2_1199.jpg" media="(max-width: 1199px)">
+                            <img src="./img/cards/card-tours-2.jpg" alt="Экстремальный отдых">
+                        </picture>
                         <div class="tours-description">
                             <h2 class="tours-description-title">Экстремальный отдых</h2>
                         </div>
@@ -70,7 +80,12 @@
                     <div class="cards-row-column">
                         <!-- card -->
                         <a href="#" class="card blue-color">
-                            <img src="./img/cards/card-tours-3.jpg" alt="Невероятные приключения">
+                            <picture>
+                                <source srcset="./img/cards/card-tours-3_599.jpg" media="(max-width: 599px)">
+                                <source srcset="./img/cards/card-tours-3_899.jpg" media="(max-width: 899px)">
+                                <source srcset="./img/cards/card-tours-3_1199.jpg" media="(max-width: 1199px)">
+                                <img src="./img/cards/card-tours-3.jpg" alt="Невероятные приключения">
+                            </picture>
                             <div class="tours-description">
                                 <h2 class="tours-description-title">Невероятные приключения</h2>
                             </div>
@@ -79,7 +94,12 @@
 
                     <!-- card -->
                         <a href="./tracking.html" class="card brown-color">
-                            <img src="./img/cards/card-tours-4.jpg" alt="Трекинг походы">
+                            <picture>
+                                <source srcset="./img/cards/card-tours-4_599.jpg" media="(max-width: 599px)">
+                                <source srcset="./img/cards/card-tours-4_899.jpg" media="(max-width: 899px)">
+                                <source srcset="./img/cards/card-tours-4_1199.jpg" media="(max-width: 1199px)">
+                                <img src="./img/cards/card-tours-4.jpg" alt="Трекинг походы">
+                            </picture>
                             <div class="tours-description">
                                 <h2 class="tours-description-title">Трекинг походы</h2>
                             </div>
@@ -88,7 +108,12 @@
                     </div>
                         <!-- card -->
                         <a href="#" class="card green-color">
-                            <img src="./img/cards/card-tours-5.jpg" alt="Экзотические джунгли">
+                            <picture>
+                                <source srcset="./img/cards/card-tours-5_599.jpg", media="(max-width: 599px)">
+                                <source srcset="./img/cards/card-tours-5_899.jpg", media="(max-width: 899px)">
+                                <source srcset= "./img/cards/card-tours-5_1199.jpg", media="(max-width: 1199px)">
+                                <img src="./img/cards/card-tours-5.jpg" alt="Экзотические джунгли">
+                            </picture>
                             <div class="tours-description">
                                 <h2 class="tours-description-title">Экзотические джунгли</h2>
                             </div>
