--- a/tours.html
+++ b/tours.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Туры и наравления - агенство ФорестТревел</title>
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/media.css">
     
     <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon-32x32.png">
@@ -20,8 +19,14 @@
 </head>
 <body>
     <header class="header-inner"> 
+        <!-- Mobile menu overlay -->
+        <div class="overlay"></div>
         <div class="header-row header-row--inner">
             <div class="logo">ФорестТревел</div>
+            <!-- Mobile menu button -->
+            <button class="mobile-nav-button">
+                <div class="button-middle-line"></div>
+            </button>
             <nav class="header-nav">
                 <ul class="header-nav-list">
                     <li class="header-nav-item"><a href="./index.html">Главная</a></li>
@@ -30,10 +35,17 @@
                     <li class="header-nav-item"><a href="#">Галерея</a></li>
                     <li class="header-nav-item"><a href="./contacts.html">Контакты</a></li>
                 </ul>
-                <button class="header-nav-button">
-                    <img src="./img/icons/menu.svg" alt="menu">
-                </button>
             </nav>
+        </div>
+        <!-- Mobile menu -->
+        <div class="mobile-menu">
+            <ul class="mobile-menu-list">
+                <li><a href="./index.html">Главная</a></li>
+                <li><a href="./tours.html">Туры и направления</a></li>
+                <li><a href="#">О компании</a></li>
+                <li><a href="#">Галерея</a></li>
+                <li><a href="./contacts.html">Контакты</a></li>
+            </ul>
         </div>
     </header>
     <main class="inner-page">
@@ -164,5 +176,6 @@
             </div>
         </div>
     </footer>
+    <script src="./js/main.js"></script>
 </body>
 </html>
